--- a/assets/style/mainpage.css
+++ b/assets/style/mainpage.css
@@ -15,7 +15,7 @@
     grid-row: 1/2;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
-    font-size:  2.73vw;
+    font-size: 2.73vw;
     text-align: center;
   }
 
@@ -96,6 +96,7 @@
     z-index: 2;
     margin-top: 65vh;
     right: 1vw;
+    cursor: pointer;
   }
 
   .whatsapp {
@@ -106,6 +107,7 @@
 
   .stendup {
     position: fixed;
+    cursor: pointer;
     bottom: 7vh;
     left: 2vw;
     cursor: pointer;
@@ -118,6 +120,7 @@
 
   .stendup::before {
     content: "";
+    cursor: pointer;
     width: 12vw;
     height: 12vh;
     margin-left: 5vw;
@@ -179,7 +182,7 @@
     grid-row: 1/2;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
-    font-size:  7vw;
+    font-size: 7vw;
     text-align: left;
   }
 
