--- a/assets/style/otzivy.css
+++ b/assets/style/otzivy.css
@@ -1,80 +1,94 @@
 @media screen and (min-width: 601px) {
-.otzivy__h2{
-    width:40vw;
-    margin-left: 30vw;
-    margin-bottom: 0;
-    padding-top: 1vh;
-    margin-top: 15vh;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 600;
-    font-size: 4.17vw;
-    color:white;
-    text-align: center;
-    background-color: #2FC97F;
-    border-radius: 50px;
-    grid-column: 1/3;
-    grid-row: 1/2;
-}
-.otzivy__container{
-    display: grid;
-    padding-left: 5vw;
-    padding-right: 5vw;
-    grid-template-rows: 90vh;
-    grid-template-columns: 1fr repeat(3,25vw) 1fr;
-    margin-top: 10vh;
-    justify-content: center;
-    align-items: center;
-    column-gap: 2vw;
-}
-.otzivy__container2{
-    display: grid;
-    padding-left: 5vw;
-    padding-right: 5vw;
-    padding-bottom: 15vh;
-    grid-template-rows: 9vh;
-    grid-template-columns: 1fr 1fr;
-    margin-top: 5vh;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
+    .otzivy__h2 {
+        width: 40vw;
+        margin-left: 30vw;
+        margin-bottom: 0;
+        padding-top: 1vh;
+        margin-top: 15vh;
+        font-family: 'Raleway', sans-serif;
+        font-weight: 600;
+        font-size: 4.17vw;
+        color: white;
+        text-align: center;
+        background-color: #2FC97F;
+        border-radius: 50px;
+        grid-column: 1/3;
+        grid-row: 1/2;
+    }
 
-}
-.otzivy__link1,.otzivy__link2 {
-    display: grid;
-    justify-self: center;
-    width:25vw;
-    height: 100%;
-    padding-top: 2vh;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 600;
-    font-size: 1.51vw;
-    color:white;
-    text-decoration: none;
-    background-color: #F389DB99;
-    border-radius: 50px;
+    .otzivy__container {
+        display: grid;
+        padding-left: 5vw;
+        padding-right: 5vw;
+        grid-template-rows: 90vh;
+        grid-template-columns: 1fr repeat(3, 25vw) 1fr;
+        margin-top: 10vh;
+        justify-content: center;
+        align-items: center;
+        column-gap: 2vw;
+    }
 
-}
-.otzivy__link1:hover,.otzivy__link2:hover {
-    font-size:1.66vw;
-    color: white;
-}
-.otzivy__keys1_image, .otzivy__keys2_image, .otzivy__keys3_image{
-    width: 100%;
-}
-.otzivy__buttonleft, .otzivy__buttonright{
-    width: 85%;
-}
-.otzivy__buttonleft:hover, .otzivy__buttonright:hover{
-    width: 95%;
-}
-.otzivy__mobilecontainer{
-    display: none;
-}
+    .otzivy__container2 {
+        display: grid;
+        padding-left: 5vw;
+        padding-right: 5vw;
+        padding-bottom: 15vh;
+        grid-template-rows: 9vh;
+        grid-template-columns: 1fr 1fr;
+        margin-top: 5vh;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+
+    }
+
+    .otzivy__link1,
+    .otzivy__link2 {
+        display: grid;
+        justify-self: center;
+        width: 25vw;
+        height: 100%;
+        padding-top: 2vh;
+        font-family: 'Raleway', sans-serif;
+        font-weight: 600;
+        font-size: 1.51vw;
+        color: white;
+        text-decoration: none;
+        background-color: #F389DB99;
+        border-radius: 50px;
+
+    }
+
+    .otzivy__link1:hover,
+    .otzivy__link2:hover {
+        font-size: 1.66vw;
+        color: white;
+    }
+
+    .otzivy__keys1_image,
+    .otzivy__keys2_image,
+    .otzivy__keys3_image {
+        width: 100%;
+    }
+
+    .otzivy__buttonleft,
+    .otzivy__buttonright {
+        width: 85%;
+    }
+
+    .otzivy__buttonleft:hover,
+    .otzivy__buttonright:hover {
+        width: 95%;
+    }
+
+    .otzivy__mobilecontainer {
+        display: none;
+    }
 }
 
 @media screen and (max-width: 600px) {
-    .otzivy__h2{
-        width:70vw;
+    .otzivy__h2 {
+        width: 70vw;
         height: 7vh;
         margin-left: 15vw;
         padding-top: 1vh;
@@ -82,55 +96,75 @@
         font-family: 'Raleway', sans-serif;
         font-weight: 600;
         font-size: 7vw;
-        color:white;
+        color: white;
         text-align: center;
         background-color: #2FC97F;
         border-radius: 50px;
         grid-column: 1/3;
         grid-row: 1/2;
     }
-.otzivy__container, .otzivy__container2{
-    display: none;
-}
-.otzivy__mobilecontainer{
-    padding-top:5vh;
-    display: grid;
-    grid-template-columns: 90vw;
-    padding-left: 5vw;
-    padding-right: 5vw;
-    grid-template-rows: 10vh 80vh 10vh;
-   justify-content: center;
-   align-items: center;
-}
-.otzivy__link1,.otzivy__link2 {
-    display: grid;
-    justify-self: center;
-    align-self: center;
-    width:60vw;
-    height: 60%;
-    padding-top: 1.5vh;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 600;
-    font-size:4vw;
-    text-align: center;
-    color:white;
-    text-decoration: none;
-    background-color: #F389DB99;
-    border-radius: 50px;
 
-}
+    .otzivy__container,
+    .otzivy__container2 {
+        display: none;
+    }
 
-.otzivy__link1:active,.otzivy__link2:active{
-    font-size: 17px;
-    color:white;
-}
-.otzivy__keys1{
-    padding-left: 5vw;
-    width: 95%;
-}
-.otzivy__keys1_image{
+    .otzivy__mobilecontainer {
+        padding-top: 5vh;
+        display: grid;
+        grid-template-columns: 90vw;
+        padding-left: 5vw;
+        padding-right: 5vw;
+        grid-template-rows: 10vh 80vh 10vh;
+        justify-content: center;
+        align-items: center;
 
-    width:100%;
-    
-}
+    }
+
+    .otzivy__link1,
+    .otzivy__link2 {
+        display: grid;
+        justify-self: center;
+        align-self: center;
+        width: 60vw;
+        height: 60%;
+        padding-top: 1.5vh;
+        font-family: 'Raleway', sans-serif;
+        font-weight: 600;
+        font-size: 4vw;
+        text-align: center;
+        color: white;
+        text-decoration: none;
+        background-color: #F389DB99;
+        border-radius: 50px;
+
+    }
+
+    .otzivy__link1:active,
+    .otzivy__link2:active {
+        font-size: 17px;
+        color: white;
+    }
+
+
+    .otzivy__keys1_image {
+
+        padding-left: 15vw;
+        width: 85%;
+
+    }
+
+    .carousel-indicators {
+
+        margin-bottom: 0%;
+    }
+
+    .otzivy__mobile1 {
+        background-color: #2FC97F;
+        border-radius: 70%;
+    }
+
+
+
+
 }
