--- a/assets/style/lessons.css
+++ b/assets/style/lessons.css
@@ -98,39 +98,30 @@
         height: 100%;
         display: grid;
         grid-template-columns: 100%;
-        grid-template-rows: 15% 58% 20%;
+        grid-template-rows: 15% 55%;
     }
 
-
-    .video__buttons {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-template-rows: 1fr;
-        justify-content: center;
-        align-items: flex-start;
-    }
+.video__container{
+    display: grid;
+    grid-template-columns: 20% 1fr 20%;
+    grid-template-rows: 100%;
+    align-items: center;
+}
 
     #video {
-        width: 500px;
-        height: 350px;
+        width: 450px;
+        height: 300px;
     }
 
-    .videobutton__left {
-        grid-column: 2/3;
-    }
-
-    .videobutton__right {
-        grid-column: 3/4;
-    }
 
     .videobutton__left img,
     .videobutton__right img {
         width: 20%;
         justify-self: center;
+        align-self: center;
     }
 
-    .videobutton__left img:hover,
-    .videobutton__right img:hover {
+    .videobutton__left img:hover, .videobutton__right img:hover {
         width: 24%;
 
     }
@@ -167,7 +158,7 @@
     .teoria__container {
         display: grid;
         grid-template-columns: 20% 1fr 20%;
-        grid-row: 100%;
+        grid-template-rows: 100%;
 
     }
 
@@ -274,9 +265,11 @@
     .video {
         display: grid;
         grid-template-columns: 100%;
-        grid-template-rows: 15% 50%;
-        row-gap: 2vh;
-        justify-items: center;
+        grid-template-rows: 15% 40%;
+        row-gap: 4vh;
+        justify-content: center;
+        justify-self: center;
+
     }
 
     .video h2 {
@@ -285,33 +278,31 @@
     }
 
     #video {
-        width: 300px;
-        height: 1-0px;
+        width: 250px;
+        height: 200px;
     }
 
-    .video__buttons {
+    .video__container{
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-template-rows: 1fr;
-        justify-items: center;
-        margin: auto;
-        padding-left: 10vw;
-
-
+        grid-template-columns: 10% 1fr 10%;
+        grid-template-rows: 100%;
+        align-items: center;
+        justify-content: center;
+        column-gap: 2vw;
     }
+    
+    .videobutton__left,
+    .videobutton__right{
+        display: grid;
+       justify-items: center;
+       justify-self: center;
 
-    .videobutton__left {
-        grid-column: 2/3;
-    }
-
-    .videobutton__right {
-        grid-column: 3/4;
     }
 
     .videobutton__left img,
     .videobutton__right img {
-        width: 30%;
-        justify-self: center;
+        width: 40%;
+        
 
     }
 
