--- a/assets/style/lessons.css
+++ b/assets/style/lessons.css
@@ -265,8 +265,8 @@
     .video {
         display: grid;
         grid-template-columns: 100%;
-        grid-template-rows: 15% 40%;
-        row-gap: 4vh;
+        grid-template-rows: 15% 60%;
+        row-gap: 1vh;
         justify-content: center;
         justify-self: center;
 
@@ -278,32 +278,31 @@
     }
 
     #video {
-        width: 250px;
-        height: 200px;
+        width: 100%;
+        height:100%;
     }
 
     .video__container{
         display: grid;
         grid-template-columns: 10% 1fr 10%;
         grid-template-rows: 100%;
-        align-items: center;
-        justify-content: center;
         column-gap: 2vw;
+        align-items: center;
     }
     
-    .videobutton__left,
+
     .videobutton__right{
-        display: grid;
-       justify-items: center;
-       justify-self: center;
+      margin-left: 50%;
 
     }
 
-    .videobutton__left img,
-    .videobutton__right img {
-        width: 40%;
+    .videobutton__left img
+     {
+        width: 60%;
         
-
+    }
+    .videobutton__right img{
+        width:120%;
     }
 
     .lessons__ul {
