--- a/assets/style/price.css
+++ b/assets/style/price.css
@@ -42,6 +42,8 @@
     }
 
     .price__button1 {
+        padding-top: 2vh;
+        text-decoration: none;
         margin-right: 4vw;
         width: 13vw;
         height: 10vh;
@@ -51,6 +53,8 @@
     }
 
     .price__button2 {
+        padding-top: 2vh;
+        text-decoration: none;
         width: 13vw;
         height: 10vh;
         font-family: 'Raleway', sans-serif;
@@ -59,6 +63,8 @@
     }
 
     .price__button3 {
+        padding-top: 2vh;
+        text-decoration: none;
         margin-left: 4vw;
         width: 13vw;
         height: 10vh;
