--- a/assets/style/header.css
+++ b/assets/style/header.css
@@ -120,6 +120,7 @@ border-radius: 50px;
         font-family: 'Raleway', sans-serif;
         font-weight: 500;
         font-size: 5.5vw;
+        border-radius: 30px 0px 30px 30px;
         overflow-x: hidden; /* Disable horizontal scroll */
         opacity: 0;
         transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
@@ -139,6 +140,8 @@ border-radius: 50px;
     .header__mobilecontainer ul li{
     padding: 2vh;
     list-style-type: none;
+    color: white;
+    text-decoration: none;
     }
 
 
