--- a/assets/style/price.css
+++ b/assets/style/price.css
@@ -135,6 +135,8 @@
         font-family: 'Raleway', sans-serif;
         font-size: 4.5vw;
         font-weight: 800;
+        padding-top: 1.8vh;
+        text-decoration: none;
     }
 
 
